# grpc-robot

./: Dockerfile  client.py  main.py  pyproject.toml  readme.md  requirements.txt  server.py
app/: robotControl.py  server.py
proto/: control.proto
proto_gen/: __init__.py  control_pb2.py  control_pb2.pyi  control_pb2_grpc.py
